# srt-translator-complete-workspace

./: .gitignore  README.md  START_ALL.bat  proxypal-config.json  spec.md  test_case_rs
GPT_PRO_COMPLETE_REDESIGN/: PROMPT_FOR_GPT_PRO.md  README.md
GPT_PRO_COMPLETE_REDESIGN/current-tool/: QUICK_START.md  README.md  USER_GUIDE_EN.md  USER_GUIDE_VN.md  package-lock.json
GPT_PRO_COMPLETE_REDESIGN/current-tool/src/: index.tsx
GPT_PRO_COMPLETE_REDESIGN_MILESTONE_A/GPT_PRO_COMPLETE_REDESIGN/current-tool/: QUICK_START.md  USER_GUIDE_VN.md  package.json  (+1 more)
GPT_PRO_COMPLETE_REDESIGN_MILESTONE_B/GPT_PRO_COMPLETE_REDESIGN/: DOCS_INDEX.md
GPT_PRO_REVIEW_PACKAGE/: CRITICAL_CONTEXT_ADDENDUM.md  GPT_PRO_REVIEW.md  PROMPT_FOR_GPT_PRO.md  ProxySettings.tsx  README.md  SESSION_WALKTHROUGH.md  commands_proxy_config.rs  lib.rs  proxy_config.rs  proxypal_Settings.tsx  srt_translator_App.tsx  srt_translator_Settings.tsx  tauri.conf.json
srt-translator/: .gitignore  BUG_REPORT.md  BUILD.bat  DEV.bat  add-defender-exclusions.ps1  index.html  package-lock.json  package.json  pre-build-test.ps1  start-proxypal.bat  tailwind.config.js  test-proxypal.ps1  tsconfig.json  vite.config.ts
srt-translator/.cargo/: config.toml
srt-translator/src/: App.tsx  index.tsx
srt-translator/src-tauri/: Cargo.toml  tauri.conf.json
srt-translator/src-tauri/capabilities/: default.json
srt-translator/src-tauri/src/: lib.rs  main.rs
srt-translator/src-tauri/src/commands/: browser.rs  mod.rs  proxy_config.rs
srt-translator/test-files/: README.md  malformed.srt  medium.srt  small.srt  utf8-bom.srt
(+54 files in other folders)
